--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "awesome-namestorage",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Storage via window.name",
-  "keywords": ["arale", "utility"],
+  "keywords": [
+    "arale",
+    "utility"
+  ],
   "homepage": "https://github.com/ant-ife/awesome-namestorage",
   "author": "ziv<zivyangll@gmail.com>",
   "scripts": {
+    "dev": "webpack-dev-server",
+    "dev:test": "cross-env NODE_ENV=test webpack-dev-server",
     "lint": "eslint --ext .js . --fix",
-    "build": "webpack -p --progress --hide-modules"
+    "build": "webpack -p --progress --hide-modules",
+    "test": "torch --compile --renderer --recursive ./test",
+    "test:debug": "torch --compile --interactive --watch --recursive ./test",
+    "ci": "npm run lint && npm run test",
+    "contributor": "git-contributor"
   },
   "repository": {
     "type": "git",
@@ -18,22 +27,29 @@
   },
   "main": "./dist/index.js",
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-import": "^1.0.1",
     "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "expect.js": "0.3.1",
+    "cross-env": "^5.2.0",
     "eslint": "^3.19.0",
     "eslint-config-antife": "^1.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-html": "^3.0.0",
+    "expect.js": "0.3.1",
+    "git-contributor": "^1.0.8",
     "pre-commit": "^1.2.2",
+    "torchjs": "^2.0.4",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
